# ssc-raft

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CHANGES.rst  CHANGES.txt  CMakeLists.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  VERSION  __init__.py  em_legacy.cu  pyproject.toml  setup.py
.github/workflows/: release.yml  zenodo.yml
FST/: fst.cu
cuda/: ._em.cu  backprojection.cu  benchmark.cu  benchmark.h  em.cu  radon.cu
cuda/common/common10/: types.hpp
cuda/inc/: fbp.h  filter.h  filters.h  flatdark.h  include.h  pipeline.h  processing.h  rebinning.h  reconstructions.h  rings.h  sscraft.h  tomoalignment.h
cuda/inc/GeneralOperators/: filter.h  flatdark.h  operators.h  phasefilters.h  rings.h
cuda/inc/common/: complex.hpp  config.h  configs.h  configs.hpp  ffts.h  kernel_operators.hpp  logerror.hpp  operations.hpp  opt.hpp  structs.h  tomo_operators.hpp  types.hpp  workspace.h
cuda/inc/common10/: array_helper.h
cuda/inc/gc/: fdk.h  manager.cuh  utils.cuh
cuda/inc/gp/: fbp.h  filter.h  rings.h
cuda/inc/pipeline/: pipeline.h  process.h  workspace.h
cuda/inc/pipelines/: pipeline.h  pipeline.hpp
cuda/inc/processing/: alignment.h  filter.h  filters.h  filters.hpp  flatdark.h  processing.h  processing.hpp  rings.h
cuda/inc/rebinning/: rebinning.h
cuda/src/: ._radon.cu  rebinning.cu  rebinning_parameters.cu
cuda/src/FBP/: bst.cu  fbp.cu  fbprt.cu  fst.cu
cuda/src/Filters/: filters.cu
cuda/src/GeneralOperators/: flatdark.cu  kernel_operators.cu  padding.cu
cuda/src/Rebinning/: rebinning.cu  rebinning_kernel.cu  rebinning_parameters.cu
cuda/src/Rings/: rings.cu
cuda/src/TomoAlignment/: centersino.cu  tomo360.cu
cuda/src/binning/: rebinning_kernel.cu
cuda/src/common/: config.cu  operations.cu  opt.cu  opt_complex.cu  padding.cu  workspace.cu
cuda/src/pipeline/: pipeline.cu  workspace.cu
cuda/src/pipelines/: config.cu  pipeline.cu  process.cu  workspace.cu
cuda/src/processing/: background_correction.cu  excentric_tomo.cu  flatdark.cu  kernel_operators.cu  rings.cu  rotation_axis.cu  stitch360to180.cu
cuda/src/rebinning/: rebinning_kernel.cu  rebinning_parameters.cu
docs/: Makefile  README.md  conf.py  doxyconf  index.rst
docs/example/: em_mpfsupy.py  rebinning_example.py
docs/source/: about.rst  alignment.rst  api.rst  changelog.rst  conf.py  correction.rst  forward.rst  index.rst  install.rst  io.rst  mogno.rst  phasefilter.rst  pipelines.rst  public.rst  reconstruction.rst  rings.rst  tutorial.rst
docs/source/api/: alignment.rst  correction.rst  forward.rst  io.rst  mogno.rst  phasefilter.rst  phaseret.rst  pipelines.rst  reconstruction.rst  rings.rst
docs/source/contents/: changelog.rst  example.rst  install.rst  public.rst
docs/source/dev/: commom.rst  developer.rst  inc.rst  private.rst  src.rst
docs/source/previous_versions/: changelog_v2.rst
docs/source/tutorial/: alignment.md  correction.md  excentric.md  forward.md  mogno.md  phaseret.md  reconstructions.md  rings.md  rotationaxis.md
docs/source/xml/: Doxyfile.xml  classException.xml  classStopWatchInterface.xml  classStopWatchLinux.xml  cuda__fp16_8h.xml  devicefunctions_8hpp.xml  dir_07f6a4829c9f0d8366732eddb21b7674.xml  dir_7bad8fb98241d550a9a3ae4d977e523a.xml  dir_7f72761faf76ad5b97d7f36c114afa29.xml  dir_ea391df6eff8c05a1d61fc70822e6d3c.xml  dir_f3ac44d66b2f8296004d081ce96200e0.xml  drvapi__error__string_8h.xml  exception_8h.xml  group__CUDA__MATH__INTRINSIC__HALF.xml  helper__cuda_8h.xml  index.xml  (+31 more)
examples/mogno/: job.srm  mogno_fdk.py
others/: commontypes.py  ffts.h  setup.py  tomo360.cu
others/ART/: art.cu  born.cu  bronnikov.cu  paganin.cu  phase_filters.cu  phase_filters_kernel.cu  rytov.cu
others/TotalVariation/: totalvariation.cu
others/filters/: bronnikov.cu  phase_filters.cu
sscRaft/: __init__.py  _version.py  rafttypes.py
sscRaft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sscRaft/cli/: __init__.py  ssc_raft_cli.py
sscRaft/filters/: __init__.py  phase_filters.py
sscRaft/geometries/: __init__.py  em.py  fbp.py  methods.py
sscRaft/io/: __init__.py  executor_manager.py  io_.py  reader.py  saver.py
sscRaft/parallel/: ._parallel.py  ._parallel.py~  ._radon.py  __init__.py  bst.py  em.py  fbprt.py  parallel.py  reconworker.py
sscRaft/phase_retrieval/: phase.py
sscRaft/pipelines/: __init__.py  constructors.py  default_dictionary.py  filters_pipeline.py  mogno.py  pre_process.py  recon.py  recon_c_pipeline.py  recon_python_pipeline.py
sscRaft/processing/: __init__.py  background_correction.py  filters.py  flatdark.py  io.py  opt.py  rings.py
sscRaft/rebinning/: rebinning.py
sscRaft/rings/: rings.py
sscRaft/tomo360/: __init__.py  tomo360.py  tomofullview360.py
sscRaft/tomogram/: __init__.py  alignment.py  flatdark.py  rotationaxis.py
(+205 files in other folders)
